--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -72,7 +72,7 @@ econ$country <- toupper(econ$country)
 
 # Data and Methods
 
-We estimate the following model where:
+We estimate the following 'between' model where:
 
 $$\bar{y}_i=\alpha + \bar{x}_i' + (\alpha_i - \alpha + \bar{\epsilon}_i)$$
 
