--- a/analysis/1_structured_analysis/external_debt_scaled_mentions.Rmd
+++ b/analysis/1_structured_analysis/external_debt_scaled_mentions.Rmd
@@ -1,3 +1,4 @@
+
 ---
 title: "Analysis: External Debt"
 output:
@@ -98,36 +99,68 @@ Hausman test.
 
 
 ```{r}
-
 phtest(FEestimate_mentions, REestimate_mentions)
-
 ```
 
 
 ## Test for Significant Fixed Effects
 
-F-test.
-
+F-test vs pooled.
 
 ```{r}
-
 pFtest(FEestimate_mentions, pool_mentions)
-
 ```
 
+F-test vs ols.
 
-Lagrange multiplier tests of individual effects.
+```{r}
+pFtest(FEestimate_mentions, ols_mentions)
+```
+
+<!-- Lagrange multiplier tests of individual effects. -->
+
+## Test for Time Effects
+
+```{r}
+plmtest(FEestimate_mentions, c("time"), type = "bp")
+```
+
+The p-value is less than 0.05, so we should use time effects.
 
 ## Within Estimator
+
+We estimate the following 'within' model where:
+
+$$y_{it} = {\bf x'_{it}}{\bf \beta} + \alpha_i + \epsilon_{it}$$
+
+$y_i$ is the mentions/recommendations variable, and $x_i'$ is a vector of explanatory variables listed in "Variables to Include in Analysis" above.
 
 
 ```{r}
 summary(FEestimate_mentions)
 ```
 
+## Within estimator with time effects.
+
+```{r}
+summary(plm(form, data = mergedMentionsED_p, index = c("Country", "Year"), model = "within", effects = "time"))
+```
+
 
 ## Between Estimator
 
+We estimate the following 'between' model where:
+
+$$\bar{y}_i=\alpha + \bar{x}_i' + (\alpha_i - \alpha + \bar{\epsilon}_i)$$
+
+$y_i$ is the mentions/recommendations variable, and $x_i'$ is a vector of explanatory variables listed in "Variables to Include in Analysis" above.
+
 ```{r}
 summary(BEestimate_mentions)
+```
+
+## Between estimator with time effects
+
+```{r}
+summary(plm(form, data = mergedMentionsED_p, index = c("Country", "Year"), model = "between", effects = "time"))
 ```
