--- a/pulling_data_new_approach/summary.org
+++ b/pulling_data_new_approach/summary.org
@@ -14,29 +14,52 @@ library(WDI)
 #+end_src
 
 
+* Data Set Construction
 
+
+
+** Macro Variables
 
 Below is a summary of each variable and its source and description.
 
 
-| Variable          | Source | Code            | Description                                                                                             |
-|-------------------+--------+-----------------+---------------------------------------------------------------------------------------------------------|
-| Inflation         | IMF    | PCPI_PC_CP_A_PT | Prices, Consumer Price Index, All items, Percentage change, Corresponding period previous year, Percent |
-| Unemployment Rate | IMF    | LUR_PT          | Labor Markets, Unemployment Rate, Percent                                                               |
-|                   |        |                 |                                                                                                         |
+| Variable               | Source | Code             | Description                                                                                                                                                                  |
+|------------------------+--------+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Inflation              | IMF    | PCPI_PC_CP_A_PT  | Prices, Consumer Price Index, All items, Percentage change, Corresponding period previous year, Percent                                                                      |
+| Unemployment Rate      | IMF    | LUR_PT           | Labor Markets, Unemployment Rate, Percent                                                                                                                                    |
+| Gross Domestic Product | IMF    | NGDP_R_CH_SA_XDC | National Accounts, Expenditure, Gross Domestic Product, Real, Reference Chained, Seasonally adjusted, Domestic Currency                                                      |
+| Debt                   | IMF    | BCG_GALM_G01_XDC | Fiscal, Budgetary Central Government, Assets and Liabilities, Debt (at Market Value), Classification of the stocks of assets and liabilities, 2001 Manual, Domestic Currency |
+|                        |        |                  |                                                                                                                                                                              |
+
+*** IMF Data
+
+#+begin_src R :session :results output :exports both 
 
 
-** World Bank Data
-
-
-** IMF Data
+#+end_src
 
 
 
-* Data Set Construction
+*** World Bank Data
+
+#+begin_src R :session :results output :exports both 
 
 
-** Mentions
+#+end_src
+
+
+*** Merged
+
+#+begin_src R :session :results output :exports both 
+
+
+#+end_src
+
+
+
+** Mentions and Recommendations Data
+
+*** Mentions
 
 #+begin_src R :session :results output :exports both 
 mentions <- read.csv("./raw_exp.txt", stringsAsFactors=FALSE, header=TRUE)
@@ -83,4 +106,4 @@ write.csv(mergedMentions, "merged_metions.csv")
 
 #+end_src
 
-** Recommendations
+*** Recommendations
