updated summary with sent data

--- a/pulling_data/summary.org
+++ b/pulling_data/summary.org
@@ -6,29 +6,39 @@
 Below is a summary of each variable and its source and description.  These data are downloaded to csv.
 
 
-| Variable                        | Source | Code                 | Description                                                                                                                                                                  | Notes                     |
-|---------------------------------+--------+----------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------|
-| Inflation                       | IMF    | PCPI_PC_CP_A_PT      | Prices, Consumer Price Index, All items, Percentage change, Corresponding period previous year, Percent                                                                      |                           |
-| Unemployment Rate               | IMF    | LUR_PT               | Labor Markets, Unemployment Rate, Percent                                                                                                                                    |                           |
-| Gross Domestic Product          | IMF    | NGDP_R_CH_SA_XDC     | National Accounts, Expenditure, Gross Domestic Product, Real, Reference Chained, Seasonally adjusted, Domestic Currency                                                      |                           |
-| Debt                            | IMF    | BCG_GALM_G01_XDC     | Fiscal, Budgetary Central Government, Assets and Liabilities, Debt (at Market Value), Classification of the stocks of assets and liabilities, 2001 Manual, Domestic Currency |                           |
-| FDI                             | WB     | BN.KLT.DINV.CD       | Foreign direct investment, net (BoP, current US$)                                                                                                                            |                           |
-| Current Account                 | WB     | BN.CAB.XOKA.GD.ZS    | Current Account Balance as % of GDP                                                                                                                                          |                           |
-| Formal Economy (bank financing) | WB     | IC.FRM.BNKS.ZS       | Firms using banks to finance investment (% of firms)                                                                                                                         |                           |
-| External Debt                   | WB     | DT.DOD.PVLX.CD       | Present value of external debt (current US$)                                                                                                                                 |                           |
-| Multilateral Debt               | WB     | DT.DOD.MLAT.ZS       |                                                                                                                                                                              |                           |
-| Remittances                     | WB     | BX.TRF.PWKR.DT.GD.ZS | Personal remittances, received (% of GDP)                                                                                                                                    |                           |
-| Service-based economy           | WB     | BG.GSR.NFSV.GD.ZS    | Trade in services (% of GDP)                                                                                                                                                 |                           |
-| Exports                         | WB     | NE.EXP.GNFS.ZS       | Exports of goods and services (% of GDP)                                                                                                                                     |                           |
-| GDP Growth                      | WB     | NY.GDP.MKTP.KD.ZG    | GDP growth (annual %)                                                                                                                                                        |                           |
-| GDP Per Capita Growth           | WB     | NY.GDP.PCAP.KD.ZG    | GDP per capita growth (annual %)                                                                                                                                             |                           |
-| Savings                         | WB     | NY.GDS.TOTL.ZS       | Gross domestic savings (% of GDP)                                                                                                                                            |                           |
-| Imports                         | WB     | NE.IMP.GNFS.ZS       | Imports of goods and services (% of GDP)                                                                                                                                     |                           |
-| Labor Force Part.               | WB     | SL.TLF.CACT.ZS       | Labor force participation rate, total (% of total population ages 15+) (modeled ILO estimate)                                                                                |                           |
-| Military Spending               | WB     | MS.MIL.XPND.CN       | Military Expenditures (US $)                                                                                                                                                 |                           |
-| Ease of Business                | WB     | IC.BUS.EASE.XQ       | Ease of doing business index (1=most business-friendly regulations)                                                                                                          | Data only exists for 2018 |
-|                                 |        |                      |                                                                                                                                                                              |                           |
+| Variable                        | Source | Code                 | Description                                                                                                                                                                  | Notes                           |
+|---------------------------------+--------+----------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------|
+| Inflation                       | IMF    | PCPI_PC_CP_A_PT      | Prices, Consumer Price Index, All items, Percentage change, Corresponding period previous year, Percent                                                                      |                                 |
+| Unemployment Rate               | IMF    | LUR_PT               | Labor Markets, Unemployment Rate, Percent                                                                                                                                    |                                 |
+| Gross Domestic Product          | IMF    | NGDP_R_CH_SA_XDC     | National Accounts, Expenditure, Gross Domestic Product, Real, Reference Chained, Seasonally adjusted, Domestic Currency                                                      |                                 |
+| Debt                            | IMF    | BCG_GALM_G01_XDC     | Fiscal, Budgetary Central Government, Assets and Liabilities, Debt (at Market Value), Classification of the stocks of assets and liabilities, 2001 Manual, Domestic Currency |                                 |
+| FDI                             | WB     | BN.KLT.DINV.CD       | Foreign direct investment, net (BoP, current US$)                                                                                                                            |                                 |
+| Current Account                 | WB     | BN.CAB.XOKA.GD.ZS    | Current Account Balance as % of GDP                                                                                                                                          |                                 |
+| Formal Economy (bank financing) | WB     | IC.FRM.BNKS.ZS       | Firms using banks to finance investment (% of firms)                                                                                                                         |                                 |
+| External Debt                   | WB     | DT.DOD.PVLX.CD       | Present value of external debt (current US$)                                                                                                                                 |                                 |
+| Multilateral Debt               | WB     | DT.DOD.MLAT.ZS       |                                                                                                                                                                              |                                 |
+| Remittances                     | WB     | BX.TRF.PWKR.DT.GD.ZS | Personal remittances, received (% of GDP)                                                                                                                                    |                                 |
+| Service-based economy           | WB     | BG.GSR.NFSV.GD.ZS    | Trade in services (% of GDP)                                                                                                                                                 |                                 |
+| Exports                         | WB     | NE.EXP.GNFS.ZS       | Exports of goods and services (% of GDP)                                                                                                                                     |                                 |
+| GDP Growth                      | WB     | NY.GDP.MKTP.KD.ZG    | GDP growth (annual %)                                                                                                                                                        |                                 |
+| GDP Per Capita Growth           | WB     | NY.GDP.PCAP.KD.ZG    | GDP per capita growth (annual %)                                                                                                                                             |                                 |
+| Savings                         | WB     | NY.GDS.TOTL.ZS       | Gross domestic savings (% of GDP)                                                                                                                                            |                                 |
+| Imports                         | WB     | NE.IMP.GNFS.ZS       | Imports of goods and services (% of GDP)                                                                                                                                     |                                 |
+| Labor Force Part.               | WB     | SL.TLF.CACT.ZS       | Labor force participation rate, total (% of total population ages 15+) (modeled ILO estimate)                                                                                |                                 |
+| Military Spending               | WB     | MS.MIL.XPND.CN       | Military Expenditures (US $)                                                                                                                                                 |                                 |
+| NATO Membership                 | NATO   |                      | NATO members by year.                                                                                                                                                        |                                 |
+| Shadow Economy                  | ?      | ?                    | Size of the shadow economy. Don't know the units. Need to scale by GDP or other measure.                                                                                     | Data for all years 1991 to 2015 |
+|                                 |        |                      |                                                                                                                                                                              |                                 |
 
+
+* Questionable
+
+| Variable          | Source | Code           | Description                                                         | Notes                                                                                                   |
+|-------------------+--------+----------------+---------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------|
+| Corruption        | ?      | ?              | ?                                                                   | The measure changed from 2011 to 2012.  Have to look at the change and see if we can still use the data |
+| % Informal Sector | ?      | ?              | ?                                                                   | % of firms in the informal sector. Don't have enough years.                                             |
+| Ease of Business  | WB     | IC.BUS.EASE.XQ | Ease of doing business index (1=most business-friendly regulations) | Data only exists for 2018                                                                               |
+|                   |        |                |                                                                     |                                                                                                         |
 
 * Unavailable Data
 
